# csv_helper

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  conanfile.txt  csv_helper.ini
conan/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
design/: .$CsvFile.drawio.bkp  CsvFile.drawio  CsvFile2.drawio  Doxyfile  csvvalidator.drawio  doc.md  namespaces.txt  settingsetter.cpp  taskfactory_concept.txt
design/Doxy/html/: _analyzer_8h.html  _analyzer_8h.js  _analyzer_8h_source.html  _arguments_8h.html  _arguments_8h.js  _arguments_8h__dep__incl.dot  _arguments_8h__incl.dot  _arguments_8h_source.html  _console_8cpp.html  _console_8cpp.js  _console_8cpp__incl.dot  _console_8cpp_a74c3677a9fdbe67750708c80f024fda6_cgraph.dot  _console_8cpp_a74c3677a9fdbe67750708c80f024fda6_icgraph.dot  _console_8cpp_ac913f3b4a0bd417e4bcba70be94f15df_cgraph.dot  _console_8cpp_ac913f3b4a0bd417e4bcba70be94f15df_icgraph.dot  _console_8cpp_accbbd417105e2a527c315e6f04294db0_cgraph.dot  _console_8cpp_accbbd417105e2a527c315e6f04294db0_icgraph.dot  _console_8cpp_aef88758aa1711e663bf9ed78bcd5bf22_cgraph.dot  _console_8cpp_aef88758aa1711e663bf9ed78bcd5bf22_icgraph.dot  _console_8h.html  _console_8h.js  _console_8h__dep__incl.dot  _console_8h__incl.dot  _console_8h_source.html  _console_arguments_8h.html  _console_arguments_8h.js  _console_arguments_8h_source.html  _csv_data_8h.html  _csv_data_8h.js  _csv_data_8h__incl.dot  _csv_data_8h_source.html  _data_8cpp.html  _data_8h.html  _data_8h.js  _data_8h_source.html  _file_handler_8cpp.html  _file_handler_8cpp__incl.dot  _file_handler_8h.html  _file_handler_8h.js  _file_handler_8h__dep__incl.dot  (+323 more)
design/Doxy/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  (+21 more)
src/: CMakeLists.txt  build.bat  main.cpp
src/csv/: Analyzer.cpp  Analyzer.h  Data.cpp  Data.h  IAnalyzer.h  IParser.h  Parser.cpp  Parser.h  Result.cpp  Result.h
src/data/: ConsoleArguments.h  CsvData.cpp  CsvData.h  DisplayTable.h  IniFile.h  Ranges.h  Report.h  Result.cpp  Result.h  SettingData.h
src/data/convert/: ToRanges.cpp  ToRanges.h  ToTable.cpp  ToTable.h
src/display/: Grid.cpp  Grid.h  IDisplay.h  IReporter.h  LabelTop.cpp  LabelTop.h  Lines.cpp  Lines.h  Reporter.cpp  Reporter.h  Table.h  TableGenerator.h
src/parser/: Console.cpp  Console.h  IConsole.h  IIniFile.h  IniFile.cpp  IniFile.h
src/task/: ConfigTask.cpp  ConfigTask.h  CsvTask.cpp  CsvTask.h  HelpTask.cpp  HelpTask.h  ITask.h  Task.h  TaskFactory.cpp  TaskFactory.h
src/utils/: FileHandler.cpp  FileHandler.h  IFileHandler.h  ISettings.h  Settings.cpp  Settings.h  Utility.h
src/utils/datastructure/: Arguments.h  CsvData.h  IniData.h
src/utils/parser/: Console.cpp  Console.h  IniFile.cpp  IniFile.h
src/utils/parser/data/: ConsoleArguments.h  IniFile.h  SettingData.h
src/utils/programpath/: LinuxPath.h  ProgramPath.h  WindowsPath.h
